Fix waydowntown table visibility

--- a/registrations/assets/css/waydowntown.scss
+++ b/registrations/assets/css/waydowntown.scss
@@ -53,3 +53,7 @@ h2 {
   margin: 1rem auto;
   padding-top: 0.5rem;
 }
+
+table, thead {
+  color: $black;
+}
